--- a/index.html
+++ b/index.html
@@ -2,177 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        @font-face{
-            font-family: "LeeSeoyun";
-            src: format("woff");
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        body{
-            font-family:"LeeSeoyun";
-            margin: 0;
-            display:flex;
-            justify-content:center;
-            background-image: url("./background.png");
-        }
-        .container{
-            width: 390px;
-            background-color: #ff9d73;
-            height: 100%;
-        }
-        .photos{
-            margin-top: 30px;
-        }
-        .photo-frame{
-            margin: 15px 20px;
-            background-color: white;
-            height: 200px;
-            background-size: cover;
-
-            position: relative;
-            cursor: pointer;
-        }
-        .footer{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .f-date{
-            color: white;
-            font-size: 15px;
-            font-weight: 500;
-        }
-        #image1{
-            background-image: url('./img1.png');
-        }
-        #image2{
-            background-image: url('./img2.png');
-        }
-        #image3{
-            background-image: url('./img3.png');
-        }
-        #image4{
-            background-image: url('./img4.png');
-        }
-        .photo_description{
-            color: white;
-            background-color: black;
-            width: fit-content;
-            padding: 0 10px;
-            margin-bottom: 10px;
-            border-radius: 10px;
-            position: absolute;
-            bottom: 0;
-            transform: translate(-50%);
-            left: 50%;
-            opacity: 0;
-        }
-        .video{
-            width: 100%;
-            height: 100%;
-        }
-        .showText{
-            opacity: 0;
-        }
-        .hideText{
-            opacity: 1;
-            transition: opacity 0.5s linear;
-        }
-    </style>
-    <script>
-        function showText(number){
-            if (number === 1) {
-                document.querySelector("#desc1").classList.remove
-                document.querySelector("#desc1").classList.add
-            } else if(number === 2) {
-                document.querySelector("#desc2").classList.remove
-                document.querySelector("#desc2").classList.add
-            } else if(number === 3) {
-                document.querySelector("#desc3").classList.remove
-                document.querySelector("#desc3").classList.add
-            } else {
-                document.querySelector("#desc4").classList.remove
-                document.querySelector("#desc4").classList.add
-            }
-        }
-
-        function hideText(number){
-            if (number === 1) {
-                document.querySelector("#desc1").classList.remove
-                document.querySelector("#desc1").classList.add
-            } else if(number === 2) {
-                document.querySelector("#desc2").classList.remove
-                document.querySelector("#desc2").classList.add
-            } else if(number === 3) {
-                document.querySelector("#desc3").classList.remove
-                document.querySelector("#desc3").classList.add
-            } else {
-                document.querySelector("#desc4").classList.remove
-                document.querySelector("#desc4").classList.add("dasdasdad")
-            }
-        }
-        function alertText(number) {
-            alert('($number)번째 추억입니다.')
-        }
-    </script>
+    <title>Web Speech Recorder</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="photos">
-            <div id="image1" class="photo-frame"
-                    onmouseover="hideText(1)"
-                    onmouseout="showText(1)"
-                    onclick="alertText(1)"
-            > 
-                <span id="desc1" class="photo_description">
-                     수영레슨 중 
-                </span>
-            </div>
-            <div id="image2" class="photo-frame"
-                    onmouseover="hideText(2)"
-                    onmouseout="showText(2)"
-                    onclick="alertText(2)"
-            > 
-                <span id="desc2" class="photo_description">
-                     번개맨!!   
-                </span>
-            </div>
-            <div id="image3" class="photo-frame"
-                    onmouseover="hideText(3)"
-                    onmouseout="showText(3)"
-                    onclick="alertText(3)"
-            > 
-                <span id="desc3" class="photo_description">
-                     그리도 좋나   
-                </span>
-            </div>
-            <div id="image4" class="photo-frame"
-                    onmouseover="hideText(4)"
-                    onmouseout="showText(4)"
-                    onclick="alertText(4)"
-            > 
-                <span id="desc4" class="photo_description">
-                     이모습을 또보나!   
-                </span>
-            </div>
-            <div class="photo-frame"> 
-                <iframe
-                   src='';
-                   frameborder="0"
-                   class="video"
-                ></iframe>
-            </div>
-
-        </div>
-        <div class="footer">
-            <p class="f-title"> KimYuJin Happy Time</p>
-            <p class="f-date"> 2023.03.26. </p>
-        </div>
-    </div>
+    <p>
+        <button id="startRecording">Start recording</button>
+        <button id="stopRecording" disabled>Stop recording</button>
+    </p>
 </body>
+<script>
+    navigator
+        .mediaDevices
+        .getUserMedia({audio: true})
+        .then(stream => { handlerFunction(stream) });
+
+    function handlerFunction(stream) {
+        rec = new MediaRecorder(stream);
+        rec.ondataavailable = e => {
+            audioChunks.push(e.data);
+            if (rec.state == "inactive") {
+                let blob = new Blob(audioChunks, {type: 'audio/mpeg-3'});
+                sendData(blob);
+            }
+        }
+    }
+
+    function sendData(data) {
+        var form = new FormData();
+        form.append('file', data, 'data.mp3');
+        form.append('title', 'data.mp3');
+        //Chrome inspector shows that the post data includes a file and a title.
+        $.ajax({
+            type: 'POST',
+            url: '/save-record',
+            data: form,
+            cache: false,
+            processData: false,
+            contentType: false
+        }).done(function(data) {
+            console.log(data);
+        });
+    }
+
+    startRecording.onclick = e => {
+        console.log('Recording are started..');
+        startRecording.disabled = true;
+        stopRecording.disabled = false;
+        audioChunks = [];
+        rec.start();
+    };
+
+    stopRecording.onclick = e => {
+        console.log("Recording are stopped.");
+        startRecording.disabled = false;
+        stopRecording.disabled = true;
+        rec.stop();
+    };
+</script>
 </html>
